@@ -3,12 +3,19 @@ package ru.yandex.practicum.filmorate.service;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
+import ru.yandex.practicum.filmorate.dto.*;
+import ru.yandex.practicum.filmorate.exception.NotFoundException;
+import ru.yandex.practicum.filmorate.mapper.FilmMapper;
+import ru.yandex.practicum.filmorate.mapper.GenreMapper;
+import ru.yandex.practicum.filmorate.mapper.MpaMapper;
 import ru.yandex.practicum.filmorate.model.Film;
+import ru.yandex.practicum.filmorate.model.RatingMPA;
+import ru.yandex.practicum.filmorate.storage.DbRepository.GenreDbRepository;
 import ru.yandex.practicum.filmorate.storage.FilmStorage;
 import ru.yandex.practicum.filmorate.storage.UserStorage;
 
-import java.util.Collection;
-import java.util.Comparator;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -16,76 +23,76 @@ import java.util.Comparator;
 public class FilmService {
     FilmStorage filmStorage;
     UserStorage userStorage;
+    GenreDbRepository genreStorage;
 
-    public Collection<Film> findAll() {
-        return filmStorage.findAll();
-    }
-
-    public Film create(Film film) {
-        film.setId(getNextId());
-
-        filmStorage.save(film);
-        log.info("Создан фильм: id={}, name={}", film.getId(), film.getName());
-        return film;
-    }
-
-    public Film update(Film newFilm) {
-        Film oldFilm = filmStorage.findById(newFilm.getId());
-
-        if (newFilm.getName() != null && !newFilm.getName().isBlank()) {
-            oldFilm.setName(newFilm.getName());
-            log.debug("Поле name фильма с id={} обновлено, новое значение name={}", oldFilm.getId(), oldFilm.getName());
-        }
-
-        if (newFilm.getDescription() != null && !newFilm.getDescription().isBlank()) {
-            oldFilm.setDescription(newFilm.getDescription());
-            log.debug("Поле description фильма с id={} обновлено, новое значение descriprion={}", oldFilm.getId(), oldFilm.getDescription());
-        }
-
-        if (newFilm.getReleaseDate() != null) {
-            oldFilm.setReleaseDate(newFilm.getReleaseDate());
-            log.debug("Поле releaseDate фильма с id={} обновлено, новое значение releaseDate={}", oldFilm.getId(), oldFilm.getReleaseDate());
-        }
-
-        if (newFilm.getDuration() != null) {
-            oldFilm.setDuration(newFilm.getDuration());
-            log.debug("Поле duration фильма с id={} обновлено, новое значение duration={}", oldFilm.getId(), oldFilm.getDuration());
-        }
-
-        log.info("Обновлён фильм: id={}, name={}", oldFilm.getId(), oldFilm.getName());
-        return oldFilm;
-    }
-
-    public Film likeFilm(Long filmId, Long userId) {
-        Film film = filmStorage.findById(filmId);
-        userStorage.findById(userId);
-        film.getLikes().add(userId);
-        log.info("Пользователь id={} поставил лайк фильму id={}", userId, filmId);
-        return film;
-    }
-
-    public Film removeLikeFilm(Long filmId, Long userId) {
-        Film film = filmStorage.findById(filmId);
-        userStorage.findById(userId);
-        film.getLikes().remove(userId);
-        log.info("Пользователь id={} удалил лайк с фильма id={}", userId, filmId);
-        return film;
-    }
-
-    public Collection<Film> findPopularFilm() {
+    public List<FilmDto> findAllFilms() {
+        log.info("");
         return filmStorage.findAll()
                 .stream()
-                .sorted(Comparator.comparing(film -> film.getLikes().size()))
-                .toList()
-                .reversed();
+                .map(FilmMapper::toFilmDto)
+                .collect(Collectors.toList());
     }
 
-    private long getNextId() {
-        long currentMaxId = filmStorage.getKeys()
+    public FilmDto findFilmById(long filmId) {
+        log.info("");
+        FilmDto filmDto = FilmMapper.toFilmDto(filmStorage.findById(filmId).orElseThrow(() -> new NotFoundException("Film not found id: " + filmId)));
+        filmDto.setGenres(genreStorage.findGenresByFilmID(filmId)
                 .stream()
-                .mapToLong(id -> id)
-                .max()
-                .orElse(0);
-        return ++currentMaxId;
+                .map(GenreMapper::toDto)
+                .sorted(Comparator.comparing(GenreDto::getId))
+                .collect(Collectors.toCollection(LinkedHashSet::new)));
+        return filmDto;
+    }
+
+    public FilmDto createFilm(FilmDto filmRequest) {
+        log.info("");
+        Film film = FilmMapper.toFilm(filmRequest);
+        Film filmFromDb = filmStorage.save(film);
+        for (GenreDto genreDto : filmRequest.getGenres()) {
+            filmStorage.addGenreFilm(filmFromDb.getId(), genreDto.getId());
+            filmFromDb.getGenres().add(GenreMapper.fromDto(genreDto));
+        }
+        return FilmMapper.toFilmDto(filmFromDb);
+    }
+
+    public FilmDto updateFilm(FilmDto filmRequest) {
+        log.info("");
+        filmStorage.findById(filmRequest.getId()).orElseThrow(() -> new NotFoundException("Film not found id: " + filmRequest.getId()));
+        Film film = FilmMapper.toFilm(filmRequest);
+        Film filmFromDb = filmStorage.update(film);
+        for (GenreDto genreDto : filmRequest.getGenres()) {
+            filmStorage.addGenreFilm(filmFromDb.getId(), genreDto.getId());
+            filmFromDb.getGenres().add(GenreMapper.fromDto(genreDto));
+        }
+        return FilmMapper.toFilmDto(filmFromDb);
+    }
+
+    public void addLike(Long filmId, Long userId) {
+        Film film = filmStorage.findById(filmId).orElseThrow(() -> new NotFoundException("Film not found id: " + filmId));
+        userStorage.findById(userId).orElseThrow(() -> new NotFoundException("Film not found id: " + userId));
+        filmStorage.addLike(filmId, userId);
+    }
+
+    public void removeLikeFilm(Long filmId, Long userId) {
+        Film film = filmStorage.findById(filmId).orElseThrow(() -> new NotFoundException("Film not found id: " + filmId));
+        userStorage.findById(userId).orElseThrow(() -> new NotFoundException("Film not found id: " + userId));
+        filmStorage.removeLike(filmId, userId);
+    }
+
+    public List<Film> findPopularFilm(int count) {
+        return filmStorage.getPopularFilms();
+    }
+
+    public RatingMpaDto getMpaByID(long mpaId) {
+        return Arrays.stream(RatingMPA.values())
+                .filter(mpa -> mpa.getId() == mpaId)
+                .map(MpaMapper::toDto)
+                .findFirst().orElseThrow(() -> new NotFoundException("Рейтинг не существует"));
+    }
+
+    public List<RatingMpaDto> getGetMpaAll() {
+        return Arrays.stream(RatingMPA.values())
+                .map(MpaMapper::toDto)
+                .collect(Collectors.toList());
     }
 }
